Update staff service, fix datetimepicker

--- a/deskover-dashboard-website/src/app/components/home/manage/categories/subcategories/subcategories.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/categories/subcategories/subcategories.component.html
@@ -90,7 +90,7 @@
               <td class="align-middle text-end">
                 <div *ngIf="isActive" class="d-flex align-items-center justify-content-end">
                   <button type="button" class="btn btn-sm btn-info me-1" placement="top" tooltip="Sửa"
-                          (click)="getSubcategory(subcategory.id)">
+                          (click)="getSubcategory(subcategory)">
                     <i class="fas fa-pen-square"></i>
                   </button>
                   <button type="button" class="btn btn-sm btn-danger" (click)="deleteSubcategory(subcategory)"
