--- a/deskover-dashboard-website/src/app/components/home/manage/brands/brands.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/brands/brands.component.html
@@ -77,7 +77,7 @@
               <td class="align-middle text-end">
                 <div *ngIf="isActive" class="d-flex align-items-center justify-content-end">
                   <button type="button" class="btn btn-sm btn-info me-1" placement="top" tooltip="Sửa"
-                          (click)="getBrand(brand.id)">
+                          (click)="getBrand(brand)">
                     <i class="fas fa-pen-square"></i>
                   </button>
                   <button type="button" class="btn btn-sm btn-danger" (click)="deleteBrand(brand)"
