--- a/deskover-dashboard-website/src/app/components/home/manage/categories/subcategories/subcategories.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/categories/subcategories/subcategories.component.html
@@ -82,7 +82,7 @@
                 {{ subcategory.description }}
               </td>
               <td class="align-middle">
-                {{ subcategory.category.name }}
+                {{ subcategory.category?.name }}
               </td>
               <td class="align-middle text-center">
                 {{ subcategory.modifiedAt | date: 'dd/MM/yyyy' }}
@@ -90,7 +90,7 @@
               <td class="align-middle text-end">
                 <div *ngIf="isActive" class="d-flex align-items-center justify-content-end">
                   <button type="button" class="btn btn-sm btn-info me-1" placement="top" tooltip="Sửa"
-                          (click)="getSubcategory(subcategory)">
+                          (click)="editSubcategory(subcategory)">
                     <i class="fas fa-pen-square"></i>
                   </button>
                   <button type="button" class="btn btn-sm btn-danger" (click)="deleteSubcategory(subcategory)"
@@ -164,20 +164,19 @@
           </div>
           <div class="mb-3">
             <label class="form-label" [for]="'category'">Danh mục cha</label>
-            <select id="category" class="custom-select" name="category" [(ngModel)]="subcategory.category" [compareWith]="compareFn"
-                    #category="ngModel" required>
-              <option value="">-- Chọn danh mục cha --</option>
+            <select id="category" name="category"  class="form-control" [(ngModel)]="subcategory.category"
+                    [compareWith]="compareFn" #category="ngModel" required>
+              <option [ngValue]="null">-- Chọn danh mục cha --</option>
               <option *ngFor="let category of categories" [ngValue]="category">{{category.name}}</option>
             </select>
             <div class="invalid-feedback" *ngIf="category.invalid && (category.dirty || category.touched)">
-              <span *ngIf="category.errors?.['required']">Vui lòng chọn một danh mục</span>
+              <span *ngIf="category.errors?.['required']">Vui lòng chọn danh mục</span>
             </div>
           </div>
           <div class="mb-3">
             <label [for]="'description'" class="form-label">Mô tả</label>
             <textarea class="form-control" id="description" rows="4" name="description"
                       [(ngModel)]="subcategory.description" #description="ngModel"></textarea>
-
           </div>
         </form>
       </div>
