--- a/deskover-ecommerce-website/src/main/resources/templates/vnpay.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/vnpay.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" >
+    
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,28 +10,16 @@
         <meta name="author" content="">
         <title>Tạo mới đơn hàng</title>
         <!-- Bootstrap core CSS -->
-        
+        <link href="/assets/bootstrap.min.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-  
+        <link href="/assets/jumbotron-narrow.css" rel="stylesheet">      
         <script src="/assets/jquery-1.11.3.min.js"></script>
-    	<link href="https://pay.vnpay.vn/lib/vnpay/vnpay.css" rel="stylesheet" />
-        <script src="https://pay.vnpay.vn/lib/vnpay/vnpay.min.js"></script>
+ 
     </head>
-	<style>
-		.body{
-			background-image: url(/assets/img/pay-bg.png);
-		    background-size:     cover;                      /* <------ */
-		    background-repeat:   no-repeat;
-		    background-position: center center; 
-			height: 750px;
-		}
-		.bg{
-			background-color: lightblue;  
-		  ;
-		}
-	</style>
-    <body class="body">
-         <div class="container bg" style="">
+
+    <body>
+
+         <div class="container">
            <div class="header clearfix">
 
                 <h3 class="text-muted">VNPAY DESKOVER</h3>
@@ -95,7 +84,8 @@
             </footer>
         </div>
           
-        
+        <link href="https://pay.vnpay.vn/lib/vnpay/vnpay.css" rel="stylesheet" />
+        <script src="https://pay.vnpay.vn/lib/vnpay/vnpay.min.js"></script>
         <script type="text/javascript">
             $("#frmCreateOrder").submit(function () {
                 var postData = $("#frmCreateOrder").serialize();
