Revert Admin Project

--- a/deskover-dashboard-website/src/app/components/home/manage/orders/orders.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/orders/orders.component.html
@@ -31,9 +31,9 @@
             </select>
           </div>
           <div class="col d-flex align-items-center justify-content-center justify-content-md-end">
-            <button type="button" class="btn bg-faded-primary w-sm-100 rounded-pill me-2"
+            <button type="button" class="btn bg-faded-success w-sm-100 rounded-pill me-2"
                     (click)="orderStatusCode = 'C-XN'; rerender()">
-              <span class="text-primary">Chờ xác nhận</span>
+              <span class="text-success">Chờ xác nhận</span>
             </button>
             <button type="button" class="btn bg-faded-danger w-sm-100 rounded-pill"
                     (click)="orderStatusCode = 'HUY'; rerender()">
