--- a/deskover-dashboard-website/src/app/components/shared/menu-item/menu-item.component.html
+++ b/deskover-dashboard-website/src/app/components/shared/menu-item/menu-item.component.html
@@ -7,7 +7,10 @@
     <i class="nav-icon {{ menuItem.iconClasses }}"></i>
     <p>{{ menuItem.name }}
       <span class="right d-flex" [@rotate]="isMenuExtended">
-        <i *ngIf="isExpandable && menuItem.children.length > 0" class="right fas fa-angle-right m-0"></i>
+        <i
+          *ngIf="isExpandable && menuItem.children.length > 0"
+          class="right fas fa-angle-right"
+        ></i>
       </span>
     </p>
 </a>
