Fix some error in page

--- a/deskover-dashboard-website/src/app/components/home/manage/users/users.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/users/users.component.html
@@ -123,8 +123,7 @@
         <h4 id="user-dialog" class="modal-title pull-left text-uppercase text-primary fw-bold">
           {{ user.id ? 'Cập nhật' : 'Thêm' }} nhân viên
         </h4>
-        <button type="button" class="btn-close close pull-right"
-                (click)="closeModal()" aria-label="Close">
+        <button type="button" class="btn-close close pull-right" (click)="closeModal()" aria-label="Close">
           <span aria-hidden="true" class="visually-hidden">&times;</span>
         </button>
       </div>
